--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <title>Seang Sengly - Portfolio</title>
+    <title>Seang Sengly - Profile</title>
   </head>
   <body class="dark-mode">
     <header>
@@ -13,7 +13,7 @@
       <h1>SEANG SENGLY</h1>
       <p>System Tester | Vattanac Bank</p>
       <button id="dark-mode-toggle" onclick="toggleDarkMode()">
-        <img id="dark-mode-icon" src="image/day-mode.png" alt="Dark Mode Icon" />
+        <img id="dark-mode-icon" src="day-mode.png" alt="Dark Mode Icon" />
       </button>
     </header>
     <section id="about">
@@ -87,6 +87,6 @@
       <p>LinkedIn: <a href="https://www.linkedin.com/in/seang-sengly-120a4a254/" target="_blank">LinkedIn Profile</a></p>
       <p>Telegram: <a href="https://t.me/Melta_Beta" target="_blank">Telegram</a></p>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
