--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <title>Seang Sengly - Portfolio</title>
+    <title>Seang Sengly - Profile</title>
   </head>
   <body class="dark-mode">
     <header>
       <img src="https://firebasestorage.googleapis.com/v0/b/fir-project-testing-a9d12.appspot.com/o/photo_2024-07-30_14-40-16.jpg?alt=media&token=7ea8e6e8-e48e-4063-904d-1fec068d9165" alt="Your Name" class="responsive" />
       <h1>SEANG SENGLY</h1>
-      <p>System Tester | Vattanac Bank</p>
+      <p>System Tester & Automation Tester | Vattanac Bank</p>
       <button id="dark-mode-toggle" onclick="toggleDarkMode()">
         <img id="dark-mode-icon" src="day-mode.png" alt="Dark Mode Icon" />
       </button>
