--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="dark-mode">
     <header>
-      <img src="https://firebasestorage.googleapis.com/v0/b/fir-project-testing-a9d12.appspot.com/o/photo_2024-07-30_14-40-16.jpg?alt=media&token=7ea8e6e8-e48e-4063-904d-1fec068d9165" alt="Your Name" class="responsive" />
+      <img src="https://firebasestorage.googleapis.com/v0/b/kh-donghua.appspot.com/o/logo%2Fphoto_2024-08-06_15-09-08.jpg?alt=media&token=9ec9d25a-9abd-4383-a325-c1281d73de2d" alt="Your Name" class="responsive" />
       <h1>SEANG SENGLY</h1>
       <p>System Tester & Automation Tester | Vattanac Bank</p>
       <button id="dark-mode-toggle" onclick="toggleDarkMode()">
